<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/placebo_magenta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_weight="1">


        <RelativeLayout
            android:id="@+id/first_layer"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintBottom_toTopOf="@+id/second_layer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/operationView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="30dp"
                android:maxLength="16"
                android:maxLines="2"
                android:text="@string/zero"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/result"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/operationView"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="20dp"
                android:maxLength="16"
                android:maxLines="1"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="96sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </RelativeLayout>

        <LinearLayout

            android:id="@+id/second_layer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/second_drawable_layer"
            android:elevation="40dp"
            android:orientation="vertical"
            android:padding="20dp">

            <!-- First Row -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_resource"
                    android:text="@string/trash"
                    android:textColor="@color/white"

                    android:textSize="25sp"
                    app:backgroundTint="@null"

                    />

                <Button
                    android:id="@+id/erase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/button_resource"
                    android:backgroundTint="@null"
                    android:text="@string/square_root"

                    android:textColor="@color/white"
                    android:textSize="25sp"

                    app:backgroundTint="@null" />

                <Button
                    android:id="@+id/minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_resource"
                    android:text="@string/minus"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:backgroundTint="@null"

                    />

                <Button
                    android:id="@+id/plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_resource"
                    android:text="@string/plus"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:backgroundTint="@null"

                    />


            </LinearLayout>


            <!-- Second Row -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/seven"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_resource"
                    android:text="@string/seven"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:backgroundTint="@null"

                    />

                <Button
                    android:id="@+id/eight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_resource"
                    android:text="@string/eight"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:backgroundTint="@null"

                    />

                <Button
                    android:id="@+id/nine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_resource"
                    android:text="@string/nine"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:backgroundTint="@null"

                    />

                <Button
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_resource"
                    android:text="@string/times"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:backgroundTint="@null"

                    />


            </LinearLayout>

            <!-- Third Row -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_resource"
                    android:text="@string/four"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:backgroundTint="@null"

                    />

                <Button
                    android:id="@+id/five"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_resource"
                    android:text="@string/five"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:backgroundTint="@null"

                    />

                <Button
                    android:id="@+id/six"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_resource"
                    android:text="@string/six"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:backgroundTint="@null"

                    />

                <Button
                    android:id="@+id/divide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_resource"
                    android:text="@string/divide"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:backgroundTint="@null"

                    />


            </LinearLayout>

            <!-- fourth Row -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"

                >

                <Button
                    android:id="@+id/one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_resource"
                    android:text="@string/one"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:backgroundTint="@null"

                    />

                <Button
                    android:id="@+id/two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_resource"
                    android:text="@string/two"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:backgroundTint="@null"

                    />

                <Button
                    android:id="@+id/three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_resource"
                    android:text="@string/three"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:backgroundTint="@null"

                    />

                <Button
                    android:id="@+id/equals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_resource"
                    android:text="@string/equals"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:backgroundTint="@null"

                    />


            </LinearLayout>

            <!-- fourth Row -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"

                >

                <Button
                    android:id="@+id/zero"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_resource"
                    android:gravity="center"
                    android:text="@string/zero"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:backgroundTint="@null" />
            </LinearLayout>

            <!--Fifth row-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"

                >

                <Button
                    android:id="@+id/sheet_dialog"
                    app:icon="@drawable/rounded_arrow_drop_up_24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_resource"
                    app:iconSize="45dp"
                    app:iconGravity="textEnd"
                    app:iconTint="@color/white"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/white"
                    android:textSize="5sp"
                    android:textAlignment="center"
                    app:backgroundTint="@null" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>